--- a/app/src/views/home/login.ejs
+++ b/app/src/views/home/login.ejs
@@ -5,12 +5,32 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <link rel="stylesheet" href="/css/home/login.css">
     <script src="/js/home/login.js" defer></script>
     <title>Document</title>
   </head>
   <body>
-    <input id = "id" type="text" placeholder="아이디"><br>
-    <input id = "psword" type="text" placeholder="비밀번호"><br>
-    <button>로그인</button>
+    <div class="login-box">
+      <h2>Login</h2>
+      <form>
+        <div class="user-box">
+          <input id="id" type="text" name="" required="" >
+          <label>아이디</label>
+        </div>
+        <div class="user-box">
+          <input id="psword" type="password" name="" required="" >
+          <label>비밀번호</label>
+        </div>
+        <a href="#">
+          <span></span>
+          <span></span>
+          <span></span>
+          <span></span>
+          Submit
+        </a>
+      </form>
+    </div>
   </body>
 </html>
+
+<!--  Copyright (c) 2022 by Soufiane Khalfaoui HaSsani (https://codepen.io/soufiane-khalfaoui-hassani/pen/LYpPWda) -->
