--- a/app/src/views/home/register.ejs
+++ b/app/src/views/home/register.ejs
@@ -18,22 +18,30 @@
           <label>아이디</label>
         </div>
         <div class="user-box">
+          <input id="name" type="text" name="" required="" >
+          <label>이름</label>
+        </div>
+        <div class="user-box">
           <input id="psword" type="password" name="" required="" >
           <label>비밀번호</label>
+        </div>
+        <div class="user-box">
+          <input id="confirm-psword" type="text" name="" required="" >
+          <label>비밀번호 확인</label>
         </div>
         <a href="#">
           <span></span>
           <span></span>
           <span></span>
           <span></span>
-          Submit
+          SIGNUP
         </a>
-        <a href="/register">
+        <a href="/login">
           <span></span>
           <span></span>
           <span></span>
           <span></span>
-          SignIn
+          login
         </a>
       </form>
     </div>
