회원가입 요청 구현

--- a/app/src/views/home/login.ejs
+++ b/app/src/views/home/login.ejs
@@ -21,7 +21,7 @@
           <input id="psword" type="password" name="" required="" >
           <label>비밀번호</label>
         </div>
-        <a href="#">
+        <a id="button" href="#">
           <span></span>
           <span></span>
           <span></span>
