--- a/app/src/views/home/register.ejs
+++ b/app/src/views/home/register.ejs
@@ -26,7 +26,7 @@
           <label>비밀번호</label>
         </div>
         <div class="user-box">
-          <input id="confirm-psword" type="text" name="" required="" >
+          <input id="confirm-psword" type="password" name="" required="" >
           <label>비밀번호 확인</label>
         </div>
         <a href="#">
